[tool.poetry]
name = "dog_analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scrapy = "^1.8.0"
pandas = "^1.0.1"
beautifulsoup4 = "^4.8.2"
requests = "^2.22.0"
html5lib = "^1.0.1"
loguru = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
